--- a/app/views/recupero/recuperoFacturaLineas/formLineaProducto.scala.html
+++ b/app/views/recupero/recuperoFacturaLineas/formLineaProducto.scala.html
@@ -1,6 +1,6 @@
 @(lineaForm: Form[models.recupero.RecuperoFacturaLinea])
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 <script src="@routes.Assets.at("plugins/jquery.numeric_input.min.js")" type="text/javascript"></script>
 
@@ -25,20 +25,20 @@ $(function(){
 
  <div class="row">
 	@inputText(lineaForm("recupero_factura_id"), 'type -> "hidden")
-	
+
 	<div class="col-sm-6">
 		<label for="producto_nombre" class="control-label">Producto</label>
 		<div class="input-group @if(lineaForm.error("producto_id") != null) {has-error} else {has-required}">
 			@inputText(lineaForm("producto.nombre"), 'class -> "form-control", 'autofocus -> "autofocus", 'id -> "producto_modal")
 			@inputText(lineaForm("producto_id"), 'hidden -> "hidden", 'id -> "producto_id_modal")
 			<span class="input-group-addon">
-				<a href="#" id="searchProductoModal" 
-							data-title="Selección de producto" 
-							data-url="@controllers.compras.routes.ProductosController.modalBuscarIps()" 
-							data-height="650" 
-							data-width="700" 
-							data-listen="modal.seleccion.producto.simple" 
-							data-label="#producto_modal" 
+				<a href="#" id="searchProductoModal"
+							data-title="Selección de producto"
+							data-url="@controllers.compras.routes.ProductosController.modalBuscarIps()"
+							data-height="650"
+							data-width="700"
+							data-listen="modal.seleccion.producto.simple"
+							data-label="#producto_modal"
 							data-field="#producto_id_modal">
 							<i class="glyphicon glyphicon-search"></i>
 				</a>
@@ -48,7 +48,7 @@ $(function(){
 			<div class="text-error">@error.message</div>
 		}
 	</div>
-	
+
 </div>
 
 <div class="row">
@@ -59,7 +59,7 @@ $(function(){
 			@lineaForm("precio").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
 	</div>
-		
+
 	<div class="col-sm-3">
 		<label for="cantidad" class="control-label">Cantidad</label>
 		<div class="form-group @if(lineaForm.error("cantidad") != null) {has-error} else {has-required}">
@@ -76,20 +76,28 @@ $(function(){
 	</div>
 </div>
 <div class="row">
+	<div class="col-sm-12">
+		<label for="cuenta" class="control-label">Nota</label>
+		<div class="input-group">
+			@inputText(lineaForm("nota"), 'class -> "form-control", 'id -> "nota")
+		</div>
+	</div>
+</div>
+<div class="row">
 	<div class="col-sm-6">
 		<label for="cuenta" class="control-label">Cuenta analitica</label>
 		<div class="input-group @if(lineaForm.error("cuenta_analitica_id") != null) {has-error} else {has-required}">
 			@inputText(lineaForm("cuentaAnalitica.nombre"), 'class -> "form-control", 'id -> "cuentaAnalitica")
 			@inputText(lineaForm("cuenta_analitica_id"), 'hidden -> "hidden", 'id -> "cuentaAnalitica_id")
 			<span class="input-group-addon">
-				<a href="#" 
-				   id="searchCuentaAnalitica" 
+				<a href="#"
+				   id="searchCuentaAnalitica"
 				   class="searchModal"
-				   data-title="Selección de Cuenta Analitica" 
-				   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()" 
-				   data-height="650" 
-				   data-width="700" 
-				   data-listen="modal.seleccion.cuentaAnalitica.simple" 
+				   data-title="Selección de Cuenta Analitica"
+				   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()"
+				   data-height="650"
+				   data-width="700"
+				   data-listen="modal.seleccion.cuentaAnalitica.simple"
 				   data-label="#cuentaAnalitica" data-field="#cuentaAnalitica_id">
 				   <i class="glyphicon glyphicon-search"></i>
 				 </a>
@@ -106,13 +114,13 @@ $(function(){
 			@inputText(lineaForm("cuenta_id"),'hidden -> "hidden", 'id -> "cuenta_id_modal")
 			<span class="input-group-addon">
 				<a href="#" class="searchModal"
-							id="searchCuentaModal" 
-							data-title="Selección de Cuenta" 
-							data-url="@controllers.contabilidad.routes.CuentasController.modalBuscar()" 
-							data-height="650" 
-							data-width="700" 
-							data-listen="modal.seleccion.cuenta.simple" 
-							data-label="#cuenta_modal" 
+							id="searchCuentaModal"
+							data-title="Selección de Cuenta"
+							data-url="@controllers.contabilidad.routes.CuentasController.modalBuscar()"
+							data-height="650"
+							data-width="700"
+							data-listen="modal.seleccion.cuenta.simple"
+							data-label="#cuenta_modal"
 							data-field="#cuenta_id_modal">
 					<i class="glyphicon glyphicon-search"></i>
 				</a>
@@ -129,7 +137,7 @@ $(function(){
       <button type="submit" class="btn btn-default" title="Guardar Linea"><i class="glyphicon glyphicon-floppy-disk"></i> Guardar</button>
     </div>
 </div>
-	
+
 <script>
 $( function(){
 	if($("#producto_modal").length){
@@ -139,8 +147,8 @@ $( function(){
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#producto_id_modal").val(obj.id); 
+				callback: function (obj) {
+											$("#producto_id_modal").val(obj.id);
 											$("#precio").val(obj.precio);
 										 }
 			};
@@ -153,12 +161,12 @@ $( function(){
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#cuenta_id_modal").val(obj.id); 
+				callback: function (obj) {
+											$("#cuenta_id_modal").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('cuenta_modal', options);
-	}	
+	}
 	if($("#cuentaAnalitica").length){
 		var options = {
 				script:"/contabilidad/suggestCuentaAnalitica/",
@@ -166,12 +174,11 @@ $( function(){
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#cuentaAnalitica_id").val(obj.id); 
+				callback: function (obj) {
+											$("#cuentaAnalitica_id").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('cuentaAnalitica', options);
 	}
 })
-</script>	
-	
+</script>
