--- a/app/views/recupero/recuperoFacturaLineas/formLineaProducto.scala.html
+++ b/app/views/recupero/recuperoFacturaLineas/formLineaProducto.scala.html
@@ -79,7 +79,7 @@ $(function(){
 	<div class="col-sm-12">
 		<label for="cuenta" class="control-label">Nota</label>
 		<div class="input-group">
-			@inputText(lineaForm("nota"), 'class -> "form-control", 'id -> "nota")
+			@textarea(lineaForm("nota"), 'class -> "form-control", 'id -> "nota", 'rows -> "1",'cols -> "500")
 		</div>
 	</div>
 </div>
