--- a/app/views/recupero/recuperoRecibo/indexRecibo.scala.html
+++ b/app/views/recupero/recuperoRecibo/indexRecibo.scala.html
@@ -4,7 +4,7 @@
 @import models.auth._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @scripts = {
-
+	<script src="@routes.Assets.at("javascripts/recupero/recuperoFactura.js")" type="text/javascript"></script>
 }
 
 @getClassEstado(i:Estado) = @{
@@ -80,6 +80,28 @@
 				@inputText(formBuscador("fecha_desde"), 'class -> "form-control dateMask inputDateMascara", 'id -> "desde", 'placeholder -> "Desde")
 				@inputText(formBuscador("fecha_hasta"), 'class -> "form-control dateMask inputDateMascara", 'id -> "hasta", 'placeholder -> "Hasta")
 				</div>
+
+			</div>
+
+			<div class="col-sm-4">
+				<label class="control-label">Cliente</label>
+					<div class="input-group">
+						@inputText(formBuscador("cliente.nombre"), 'name -> "", 'class -> "form-control", 'id -> "cliente")
+						@inputText(formBuscador("cliente_id"), 'hidden -> "hidden", 'id -> "cliente_id")
+						<span class="input-group-addon">
+							<a href="#" class="searchModal"
+										id="searchCliente"
+										data-title="Selección de Clientes"
+										data-url="@controllers.compras.routes.ClientesController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.cliente.simple"
+										data-label="#cliente"
+										data-field="#cliente_id">
+								<i class="glyphicon glyphicon-search"></i>
+							</a>
+						</span>
+					</div>
 
 			</div>
 
