--- a/app/views/compras/clientes/form.scala.html
+++ b/app/views/compras/clientes/form.scala.html
@@ -1,17 +1,17 @@
 @(clienteForm: Form[Cliente])
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
-	
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
+
 <div class="row menu-acciones">
 	<div class="col-sm-10">
 		<button type="submit" class="btn btn-default" title="Guardar orden">
 			<i class="glyphicon glyphicon-floppy-disk"></i> Guardar
-		</button>	
-																															   
+		</button>
+
     	<a href="@if(request().getHeader("referer")){ @request().getHeader("referer") } else {@controllers.compras.routes.ClientesController.index()}" title="Cancelar editar" class="btn btn-default"><i class="glyphicon glyphicon-floppy-remove"></i> Cancelar</a>
     </div>
 	<div class="col-sm-2">
-		<a href="@controllers.compras.routes.ClientesController.index()" title="Volver al listado" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a> 
+		<a href="@controllers.compras.routes.ClientesController.index()" title="Volver al listado" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a>
 		@if(clienteForm.field("id").value){<a href="@controllers.compras.routes.ClientesController.ver(clienteForm.field("id").value.toLong)" title="Ver cliente" class="btn btn-default"><i class="glyphicon glyphicon-align-justify"></i></a>}
 	</div>
 </div>
@@ -31,7 +31,7 @@
 			<label for="activo" class="control-label"> @checkbox(clienteForm("activo")) ¿cliente activo?</label>
 		</div>
 	</div>
-	
+
 	<div class="col-sm-3">
 		<div class=" form-group @if(clienteForm.error("cliente_tipo_id") != null) {has-error} else {has-required}">
 			<label for="@clienteForm("cliente_tipo_id").id" class="control-label">Tipo de cliente</label>
@@ -41,8 +41,16 @@
 			}
 		</div>
 	</div>
-	
-</div>	
+
+	<div class="col-sm-3">
+		<div class=" form-group">
+			<label for="@clienteForm("cliente_tipo_id").id" class="control-label">Condicion IVA</label>
+			@select(clienteForm("condicioniva_id"), CondicionIva.find.all().map { p => p.id.toString -> p.descripcion}, 'class -> "form-control select", '_default -> "Seleccionar")
+
+		</div>
+	</div>
+
+</div>
 <div class="row">
 	<div class="col-sm-3">
 		<div class="form-group">
@@ -52,7 +60,7 @@
 				<div class="text-error">@error.message</div>
 			}
 		</div>
-	</div>		
+	</div>
 	<div class="col-sm-3">
 		<div class="form-group">
 			<label for="dni" class="control-label">DNI</label>
@@ -73,20 +81,20 @@
 	</div>
 	<div class="col-sm-3">
 		<label for="servicio" class="control-label">Obra Social</label>
-		<div class="input-group"> 
+		<div class="input-group">
 			@inputText(clienteForm("obrasocial.nombre"),'class -> "form-control", 'id -> "obrasocial", 'autocomplete -> "off")
 			@inputText(clienteForm("obrasocial_id"),'hidden -> "hidden", 'id -> "obrasocial_id")
 			<span class="input-group-addon">
-				<a href="#" id="searchObraSocial" 
-				data-title="Selección de obra social" 
-				data-url="@controllers.compras.routes.ObrasSocialesController.modalBuscar()" 
-				data-height="650" data-width="700" 
-				data-listen="modal.seleccion.ob.simple" 
+				<a href="#" id="searchObraSocial"
+				data-title="Selección de obra social"
+				data-url="@controllers.compras.routes.ObrasSocialesController.modalBuscar()"
+				data-height="650" data-width="700"
+				data-listen="modal.seleccion.ob.simple"
 				data-label="#obrasocial" data-field="#obrasocial_id"><i class="glyphicon glyphicon-search"></i></a>
 			</span>
 		</div>
 	</div>
-</div>	
+</div>
 <div class="row">
 	<div class="col-sm-3">
 		<div class="form-group">
@@ -121,7 +129,7 @@
 			@inputText(clienteForm("nafiliado"), 'class -> "form-control")
 		</div>
 	</div>
-</div>		
+</div>
 <div class="row">
 	<div class="col-sm-2">
 		<div class="form-group @if(clienteForm.error("sexo") != null) {has-error}">
@@ -131,51 +139,51 @@
 	</div>
 	<div class="col-sm-2">
 		<div class="form-group @if(clienteForm.error("fnacimiento") != null) {has-error}">
-			<label for="inputNombre" class="control-label">Fecha nacimiento</label> 
+			<label for="inputNombre" class="control-label">Fecha nacimiento</label>
 			@inputText(clienteForm("fnacimiento"), 'class -> "form-control date", 'id -> "nacimiento")
 		</div>
 	</div>
-</div>	
+</div>
 @if(clienteForm("id").value != null) {
 <script>
 	$( function() {
-		
-		$("#id_paciente_rismi").numeric_input(); 
+
+		$("#id_paciente_rismi").numeric_input();
 		urlProvincias  = '@controllers.administracion.routes.ProvinciasController.listOptions()';
 		urlLocalidades = '@controllers.administracion.routes.LocalidadesController.listOptions()';
 		urlFormularioContacto  = '@controllers.compras.routes.ClientesController.formularioContacto(clienteForm("id").value.toInt)';
-		
+
 		var contenedorContactos = $('#contenedorContactos');
 		var formularioContacto = $('#formularioContacto');
-		
+
 		contenedorContactos.on('change', '.seleccionPais .select', function(){
 			var id = $(this).find('option:selected').val();
 			var contenedor = $(this).closest('.contenedorUbicacion');
 			contenedor.find('.seleccionProvincia .select, .seleccionLocalidad .select').find('option:gt(0)').remove();
-			
+
 			if(id == "") return false;
 
 			$.get(urlProvincias + '?paisId='+id, function(data){
 				contenedor.find('.seleccionProvincia .select').html(data);
 			});
 		});
-		
+
 		contenedorContactos.on('change', '.seleccionProvincia .select', function(){
 			var id = $(this).find('option:selected').val();
-			
+
 			var contenedor = $(this).closest('.contenedorUbicacion');
 			contenedor.find('.seleccionLocalidad .select').find('option:gt(0)').remove();
-			
+
 			if(id == "") return false;
 
 			$.get(urlLocalidades + '?provinciaId='+id, function(data){
 				contenedor.find('.seleccionLocalidad .select').html(data);
 			});
 		});
-		
+
         var contenedor = $('#contenedorDirecciones');
         var primerElemento = $('#contenedorDirecciones .linea-direccion:eq(0)');
-        
+
         contenedor.find('.linea-direccion').hide();
         primerElemento.show();
 
@@ -183,16 +191,16 @@
         if (getCantidadLineas() == 1)
             primerElemento.find('.eliminar').hide();
 
-        
-        $('#nuevoContacto').on('click', function() { 
+
+        $('#nuevoContacto').on('click', function() {
         	$('#listaContactos').toggleClass('hide');
         	$.get(urlFormularioContacto, function(data){
         		$('#contenedorContactos').append(data);
         	});
         	return false;
         });
-        
-        $('#contenedorContactos').on('click', '#modificarDireccion', function() { 
+
+        $('#contenedorContactos').on('click', '#modificarDireccion', function() {
         	var url = $(this).attr('href');
         	$('#listaContactos').toggleClass('hide');
         	$.get(url, function(data){
@@ -200,13 +208,13 @@
         	});
         	return false;
         });
-        
-        $('#contenedorContactos').on('click', '#cancelarEdicion', function() { 
+
+        $('#contenedorContactos').on('click', '#cancelarEdicion', function() {
         	$('#formularioContacto').remove();
         	$('#listaContactos').toggleClass('hide');
         });
-        
-        $('#contenedorContactos').on('click', '#guardarContacto', function() { 
+
+        $('#contenedorContactos').on('click', '#guardarContacto', function() {
         	var url = $(this).closest('form').attr('action');
         	$this = $(this);
 
@@ -224,7 +232,7 @@
         function getCantidadLineas() {
             return contenedor.find('.linea-direccion').length;
         }
-		
+
 	});
 </script>
 }
