--- a/app/views/compras/clientes/verCliente.scala.html
+++ b/app/views/compras/clientes/verCliente.scala.html
@@ -2,14 +2,14 @@
 @import helper._
 @import utils._
 @import models.auth._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
-@views.html.compras.mainCompras("Ver proveedor") {
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
+@views.html.compras.mainCompras("Ver cliente") {
 <div class="page-header">
 	<div class="row">
 		<div class="col-sm-9">
 			<h1>Ver cliente</h1>
 		</div>
-		
+
 
 	</div>
 </div>
@@ -25,22 +25,28 @@
 </div>
 
 	<div class="row">
-		<div class="col-sm-4">
+		<div class="col-sm-3">
 			<div class="form-group">
 				<label class="control-label">Nombre del cliente</label>
 				<p class="form-control-static form-control">@provForm.field("nombre").value</p>
 			</div>
 		</div>
-		
-		<div class="col-sm-2">
+
+		<div class="col-sm-3">
 			<div class="checkbox">
 				<label for="activo" class="control-label"> @checkbox(provForm("activo"), 'disabled -> "disabled") ¿cliente activo?</label>
 			</div>
 		</div>
-		<div class="col-sm-4">
+		<div class="col-sm-3">
 			<div class="form-group">
 				<label class="control-label">Tipo de cliente</label>
 				<p class="form-control-static form-control">@provForm.field("tipo.nombre").value</p>
+			</div>
+		</div>
+		<div class="col-sm-3">
+			<div class="form-group">
+				<label class="control-label">Condicion IVA</label>
+				<p class="form-control-static form-control">@if(proveedor.condicionIva != null){@proveedor.condicionIva.descripcion}</p>
 			</div>
 		</div>
 	</div>
@@ -71,7 +77,7 @@
 		</div>
 	</div>
 	<div class="row">
-		 
+
 		<div class="col-sm-3">
 			<div class="form-group">
 				<label class="control-label">ID Paciente</label>
@@ -101,7 +107,7 @@
 		<div class="col-sm-2 form-group">
 			<label for="sexo" class="control-label"> Sexo</label>
 			<p class="form-control-static form-control">
-			
+
 				@proveedor.sexo match {
 			    	case "M" => {Masculino}
 			    	case "F" => {Femenino}
@@ -118,27 +124,27 @@
 	</div>
 	<hr />
 	<ul class="nav nav-tabs">
-		<li class="active"><a href="#contenedorDirecciones" data-toggle="tab">Contactos del proveedor</a></li>
+		<li class="active"><a href="#contenedorDirecciones" data-toggle="tab">Contactos del cliente</a></li>
 		<li><a href="#contenedorObservaciones" data-toggle="tab">Observaciones</a></li>
 	</ul>
-	
+
 	<div class="tab-content">
 		<div class="tab-pane active" id="contenedorDirecciones">
 			@if(provForm("id").value != null){
-				@views.html.compras.clientes.contacto_cliente(provForm,true) 
+				@views.html.compras.clientes.contacto_cliente(provForm,true)
 			}
 		</div>
 		<div class="tab-pane" id="contenedorObservaciones">
 			<p class="form-control-static form-control">@provForm.field("observaciones").value</p>
 		</div>
-		
+
 	</div>
 	<hr />
 	@if(Permiso.check("verEstadosClientes")) {
 	<ul class="nav nav-tabs">
 		<li class="active"><a href="#contenedorEstadoPedido" data-toggle="tab">Estado Pedidos</a></li>
 	</ul>
-	
+
 	<div class="tab-content">
 		<div class="tab-pane active" id="contenedorEstadoPedido">
 			@if(olc != null){
@@ -174,6 +180,6 @@
 				<p class="">No existen pedidos aprobados para este paciente.</p>
 			}
 		</div>
-	</div>	
+	</div>
 	}
-}	
+}
