--- a/app/views/compras/clientes/modalCargaClientes.scala.html
+++ b/app/views/compras/clientes/modalCargaClientes.scala.html
@@ -7,7 +7,7 @@
 @helper.form(action = controllers.compras.routes.ClientesController.guardarDesdeModal(),'id -> "formCargaClienteDesdeModal") {
 @views.html.tags.successError()
  <div class="row">
-	<div class="col-sm-6">
+	<div class="col-sm-4">
 		<div class="form-group @if(clienteForm.error("nombre") != null) {has-error} else {has-required}">
 			<label for="nombre" class="control-label">Nombre</label>
 			@inputText(clienteForm("nombre"), 'class -> "form-control", 'id -> "nombre" )
@@ -16,7 +16,7 @@
 			}
 		</div>
 	</div>
-	<div class="col-sm-6">
+	<div class="col-sm-4">
 		<div class=" form-group @if(clienteForm.error("cliente_tipo_id") != null) {has-error} else {has-required}">
 			<label for="@clienteForm("cliente_tipo_id").id" class="control-label">Tipo de cliente</label>
 			@select(clienteForm("cliente_tipo_id"), ClienteTipo.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
@@ -25,7 +25,14 @@
 			}
 		</div>
 	</div>
-</div>	
+	<div class="col-sm-4">
+		<div class=" form-group">
+			<label for="@clienteForm("cliente_tipo_id").id" class="control-label">Condicion IVA</label>
+			@select(clienteForm("condicioniva_id"), CondicionIva.find.all().map { p => p.id.toString -> p.descripcion}, 'class -> "form-control select", '_default -> "Seleccionar")
+
+		</div>
+	</div>
+</div>
 <div class="row">
 	<div class="col-sm-3">
 		<div class="form-group">
@@ -35,7 +42,7 @@
 				<div class="text-error">@error.message</div>
 			}
 		</div>
-	</div>		
+	</div>
 	<div class="col-sm-3">
 		<div class="form-group">
 			<label for="dni" class="control-label">DNI</label>
@@ -47,20 +54,20 @@
 	</div>
 	<div class="col-sm-6">
 		<label for="servicio" class="control-label">Obra Social</label>
-		<div class="input-group"> 
+		<div class="input-group">
 			@inputText(clienteForm("obrasocial.nombre"),'class -> "form-control", 'id -> "obrasocial", 'autocomplete -> "off")
 			@inputText(clienteForm("obrasocial_id"),'hidden -> "hidden", 'id -> "obrasocial_id")
 			<span class="input-group-addon">
-				<a href="#" id="searchObraSocial" 
-				data-title="Selección de obra social" 
-				data-url="@controllers.compras.routes.ObrasSocialesController.modalBuscar()" 
-				data-height="650" data-width="700" 
-				data-listen="modal.seleccion.ob.simple" 
+				<a href="#" id="searchObraSocial"
+				data-title="Selección de obra social"
+				data-url="@controllers.compras.routes.ObrasSocialesController.modalBuscar()"
+				data-height="650" data-width="700"
+				data-listen="modal.seleccion.ob.simple"
 				data-label="#obrasocial" data-field="#obrasocial_id"><i class="glyphicon glyphicon-search"></i></a>
 			</span>
 		</div>
 	</div>
-</div>	
+</div>
 <div class="row">
 	<div class="col-sm-3">
 		<div class="form-group">
@@ -88,16 +95,17 @@
 	</div>
 	<div class="col-sm-3">
 		<div class="form-group @if(clienteForm.error("fnacimiento") != null) {has-error}">
-			<label for="inputNombre" class="control-label">Fecha nacimiento</label> 
+			<label for="inputNombre" class="control-label">Fecha nacimiento</label>
 			@inputText(clienteForm("fnacimiento"), 'class -> "form-control date", 'id -> "nacimiento")
 		</div>
 	</div>
-</div>	
+</div>
 <div class="row">
-	<div class="col-sm-10">
-		<button type="submit" class="btn btn-default" title="Guardar orden">
+
+	<div class="col-sm-4">
+ 		<button type="submit" class="btn btn-default" title="Guardar orden">
 			<i class="glyphicon glyphicon-floppy-disk"></i> Guardar
-		</button>	
+		</button>
 	</div>
 </div>
 <script>
@@ -105,7 +113,7 @@
 	 $('#searchObraSocial').modalSearch();
 	 $("#cuit2").mask("99999999999");
 	 $("#dni").mask("99999999");
-	 $("#id_paciente_rismi").numeric_input(); 
+	 $("#id_paciente_rismi").numeric_input();
 	 if($("#obrasocial").length){
 			var options = {
 					script:"/suggestOb/",
@@ -113,12 +121,12 @@
 					json:true,
 					shownoresults:true,
 					maxresults:6,
-					callback: function (obj) { 
-												$("#obrasocial_id").val(obj.id); 
+					callback: function (obj) {
+												$("#obrasocial_id").val(obj.id);
 											 }
 				};
 			var as_json = new bsn.AutoSuggest('obrasocial', options);
-		}	
+		}
  });
 </script>
 }
