--- a/app/views/recupero/recuperoFactura/formRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/formRecuperoFactura.scala.html
@@ -56,7 +56,7 @@
 			    </span>
 			    <span class="input-group-btn">
 			    <i class="input-group-addon" style="display:none"></i>
-			      @inputText(recuperoFacturaForm("numero"), 'class -> "form-control",'id->"numero_factura",'disabled->"disabled")
+			      @inputText(recuperoFacturaForm("numero"), 'class -> "form-control",'id->"numero_factura")
 			    </span>
 
 		  	</div>
