--- a/app/views/recupero/recuperoNotaDebito/formLineaNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/formLineaNotaDebito.scala.html
@@ -42,7 +42,7 @@ $(function(){
 		    </span>
 		    <span class="input-group-btn">
 		    <i class="input-group-addon" style="display:none"></i>
-		      @inputText(lineaForm("numero"), 'class -> "form-control",'id->"numero_factura")
+		      @inputText(lineaForm("numero"), 'class -> "form-control",'id->"numero_nc")
 		    </span>
 
 	  	</div>
