--- a/app/views/compras/ordenes/indexOrdenAuditoria.scala.html
+++ b/app/views/compras/ordenes/indexOrdenAuditoria.scala.html
@@ -40,6 +40,7 @@
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 
+					  <li role="presentation"><a id="exportacionDatosAuditoria" data-url="@controllers.compras.routes.OrdenesReportesController.exportacionDatosAuditoria()" href="#">Exportacion Datos Detallado</a></li>
 
 
 				  </ul>
