--- a/app/views/recupero/recuperoFacturaLineas/indexRecuperoFacturaLinea.scala.html
+++ b/app/views/recupero/recuperoFacturaLineas/indexRecuperoFacturaLinea.scala.html
@@ -19,8 +19,8 @@
 			<th>Codigo</th>
 			<th>Producto</th>
 			<th>Nota</th>
-			<!-- <th>Cuenta analitica</th> -->
-			<th>UDM</th>
+			<!-- <th>Cuenta analitica</th>
+			<th>UDM</th>-->
 			<th>Cantidad</th>
 			<th>Precio</th>
 			<th>Subtotal</th>
