--- a/app/views/recupero/recuperoNotaCredito/indexRecuperoGeneralNotaCredito.scala.html
+++ b/app/views/recupero/recuperoNotaCredito/indexRecuperoGeneralNotaCredito.scala.html
@@ -17,16 +17,16 @@
 		classEstado = "autorizado"
 	}
 	classEstado
-	
+
 }
 
 @views.html.recupero.mainRecupero("Notas De Creditos", scripts) {
 	<div class="page-header">
 		<div class="row">
 			<div class="col-sm-7">
-				<h1>Lista de facturas</h1>
+				<h1>Lista de Notas Creditos</h1>
 			</div>
-			
+
 			<div class="col-sm-5">
 				<div class="dropdown pull-right">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
@@ -37,7 +37,7 @@
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 				  </ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-cog"></i>
@@ -45,37 +45,30 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				  	
+
 				  </ul>
 				</div>
-					
+
 				<div class="pull-right btn-header">
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 	@views.html.tags.successError()
-	
-	
+
+
 	<div id="actions">
 		<form action="" id="formSearchRecuperoFacturas" method="GET">
-		 
 
-		<div class="row">	
-    		
-			<div class="col-sm-2">
-				<div class="form-group">
-					<label for="nombre" class="control-label">Nombre</label>
-					<div class="">
-					@inputText(formBuscador("nombre"), 'class -> "form-control", 'autofocus -> "autofocus")
-					</div>
-				</div>
-			</div>
+
+		<div class="row">
+
+
 			<div class="col-sm-2">
 				<label class="control-label">Punto Venta</label>
 				<div class="">
-				@select(formBuscador("puntoventa_id"), 
+				@select(formBuscador("puntoventa_id"),
 				PuntoVenta.find.all().map { p => p.id.toString -> p.numero}, 'class -> "form-control select", '_default -> "Seleccionar")
 				</div>
 			</div>
@@ -87,7 +80,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="col-sm-4">
 				<label class="control-label">Cliente</label>
 					<div class="input-group">
@@ -95,34 +88,68 @@
 						@inputText(formBuscador("cliente_id"), 'hidden -> "hidden", 'id -> "cliente_id")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchCliente" 
-										data-title="Selección de Clientes" 
-										data-url="@controllers.compras.routes.ClientesController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.cliente.simple" 
-										data-label="#cliente" 
+										id="searchCliente"
+										data-title="Selección de Clientes"
+										data-url="@controllers.compras.routes.ClientesController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.cliente.simple"
+										data-label="#cliente"
 										data-field="#cliente_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
 						</span>
 					</div>
-				
-			</div>
 
-			
+			</div>
+			<div class="col-sm-2">
+					<label class="control-label">Usuario
+						<div class="input-group">
+							@inputText(formBuscador("create_usuario_id"), 'hidden -> "hidden", 'id -> "create_usuario_id")
+							@inputText(formBuscador("create_usuario"), 'name -> "", 'class -> "form-control", 'id -> "create_usuario")
+							<span class="input-group-addon">
+							<a href="#" id="searchUsuario"
+										data-title="Selección de responsables"
+										data-url="@controllers.administracion.routes.UsuariosController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.usuario.simple"
+										data-label="#create_usuario"
+										data-field="#create_usuario_id">
+							<i class="glyphicon glyphicon-search"></i></a></span>
+						</div>
+					</label>
+				</div>
+
+
 			<div class="col-sm-2 input-group">
 				<label class="control-label">Fecha </label>
 				<div>
 				@inputText(formBuscador("fecha_desde"), 'class -> "form-control dateMask inputDateMascara", 'id -> "desde", 'placeholder -> "Desde")
 				@inputText(formBuscador("fecha_hasta"), 'class -> "form-control dateMask inputDateMascara", 'id -> "hasta", 'placeholder -> "Hasta")
 				</div>
-				
+
 			</div>
 		</div>
 		<div class="row">
-			 
-			 
+			<div class="col-sm-2">
+				<label for="planilla" class="control-label">Planilla</label>
+				<div class="input-group">
+					@inputText(formBuscador("planilla.recuperoPlanillaEjercicio"),'class -> "form-control", 'id -> "planilla")
+					@inputText(formBuscador("planilla_id"),'hidden -> "hidden", 'id -> "planilla_id")
+
+					<span class="input-group-addon">
+					<a href="#"
+					id="searchPlanilla" data-title="Selección de Planilla"
+					data-url="@controllers.recupero.routes.RecuperoPlanillasController.modalBuscar()"
+					data-height="650" data-width="700"
+					data-listen="modal.seleccion.planilla.simple"
+					data-label="#planilla"
+					data-field="#planilla_id">
+					<i class="glyphicon glyphicon-search"></i></a></span>
+				</div>
+			</div>
+
 			<div class="col-sm-2">
 				<div class="form-group">
 				<label for="nombre" class="control-label">&nbsp;</label>
@@ -132,27 +159,69 @@
 			<div class="col-sm-2">
 				<div class="form-group">
 				<label for="nombre" class="control-label">&nbsp;</label>
-				<a href="@controllers.recupero.routes.RecuperoFacturasController.index()"  class="form-control btn btn-default">Limpiar</a>
+				<a href="@controllers.recupero.routes.RecuperoNotasCreditosController.indexGeneral()"  class="form-control btn btn-default">Limpiar</a>
 				</div>
 			</div>
 		</div>
-		 
+
 		</form>
 	</div>
+
 	@if(buscador.getTotalRowCount == 0) {
-        
+
         <div class="well">
             <em>No se encuentran Notas</em>
         </div>
-        
+
     } else {
-    
-     
-    
+    	<table id="" class="table table-striped table-bordered">
+			<thead>
+				 <tr style="background: #FFFFFF;">
+			        <td colspan="6">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
+			        <td><b>Total:</b> <span class="baseFooter"></span></td>
+					<td colspan="1">&nbsp</td>
+		        </tr>
+				<tr>
+					<th width="100">N° Factura</th>
+					<th width="129">N° NC</th>
+					<th width="80">CAE</th>
+					<th width="70">Fecha CAE</th>
+					<th width="300">Planilla</th>
+					<th width="100">Fecha</th>
+					<th width="95">Total</th>
+
+					<th width="120">Usuario</th>
+				</tr>
+			</thead>
+			<tbody>
+				@for(linea <- buscador.getList) {
+					<tr class="pointer" data-estado="" data-href="@controllers.recupero.routes.RecuperoFacturasController.ver(linea.recupero_factura.id)&@UriTrack.encode()">
+						<td>@if(linea.recupero_factura != null){@(linea.recupero_factura.getNumeroFactura())}</td>
+						<td>@if(linea.getNumero() != null){@(linea.getNumero())}</td>
+						<td>@if(linea.cae != null){@(linea.cae)}</td>
+						<td>@if(linea.fecha_vencimiento != null){@(utils.DateUtils.formatDate(linea.fecha_vencimiento))}</td>
+						<td>@if(linea.planilla != null){@(linea.planilla.getRecuperoPlanillaEjercicio())}</td>
+						<td>@if(linea.fecha != null){@(utils.DateUtils.formatDate(linea.fecha))}</td>
+						<td>@utils.NumberUtils.moneda(linea.getTotal(),2)</td>
+						<td>@if(linea.create_usuario != null){@(linea.create_usuario.nombre)}</td>
+					</tr>
+				}
+			</tbody>
+	        <tfoot>
+		        <tr>
+			        <td colspan="6">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
+			        <td><b>Total:</b> <span class="baseFooter"></span></td>
+					<td colspan="1">&nbsp</td>
+		        </tr>
+	        </tfoot>
+        </table>
+
+
+
     <div class="pagination pull-right">
-	    @views.html.helpers.paginador(buscador, controllers.recupero.routes.RecuperoNotasCreditosController.index())
+	    @views.html.helpers.paginador(buscador, controllers.recupero.routes.RecuperoNotasCreditosController.indexGeneral())
 	</div>
-<script>
-</script>
+	<script>
+	</script>
 	}
 }
