--- a/app/views/recupero/recuperoNotaDebito/indexRecuperoGeneralNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/indexRecuperoGeneralNotaDebito.scala.html
@@ -1,138 +1,226 @@
-@(paginador:  utils.pagination.Pagination[models.recupero.RecuperoNotaCredito], editable: Boolean,rf:models.recupero.RecuperoFactura)
-<div id="listaLineaNotaCreditos" class="contenedorPaginador ajaxPaginador">
+@(buscador: utils.pagination.Pagination[models.recupero.RecuperoNotaDebito], formBuscador: DynamicForm)
+@import helper._
+@import utils._
+@import models.auth._
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
+@scripts = {
+	<script src="@routes.Assets.at("javascripts/recupero/recuperoFactura.js")" type="text/javascript"></script>
+}
 
-<div class="panel panel-default">
-		<div class="panel-heading"><b>Notas de Creditos</b>
-		
-		 	 
-		@if(rf.estado_id == models.Estado.RECUPERO_FACTURA_APROBADO) {
-			<a class="btn btn-default btn-xs" href="#" id="nuevoNotaCredito"><i class="glyphicon glyphicon-plus"></i> Nuevo</a>	 	
-		}	 
-		</div>
-		<div class="panel-body">
-			@if(paginador.getTotalRowCount == 0) {
-        		<p id="mensajeSinResultados" class="well"><i class="glyphicon glyphicon-info-sign"></i> No hay Notas de creditos para esta factura.</p>
-    		} 
-			
-			<table id="listaDeNotaCreditos" class="table table-striped table-bordered @if(paginador.getTotalRowCount() <= 0){hide}">
-				<thead>
-					<tr>
-						<!--  <th class="accion-editar">#</th>-->
-						<th>Planilla</th>
-						<th>Fecha</th>
-						<th>Producto</th>
-						<th>UDM</th>
-						<th>Cantidad</th>
-						<th>Precio</th>
-						<th>Subtotal</th>
-							<th></th>
-						
-					<tr>	
-				</thead>
-				<tbody>
-				@for(linea <- paginador.getList) {
-					@views.html.recupero.recuperoNotaCredito.lineaNotaCredito(linea, editable)
-				}
-				</tbody>
-			</table>
-
-			<div class="pagination pull-right">		
-			    @views.html.helpers.paginador(paginador, controllers.recupero.routes.RecuperoNotasCreditosController.index())
-			</div>
-	</div>
-</div>
-<script>
-$( function(){
-	/**
-	 * Ventana de carga linea de productos en ordenes
-	 */
-	 
-	var contenedor = $("#listaLineaNotaCreditos");
-
-	contenedor.on('click', '#nuevoNotaCredito', function(){
-		urlContenidoModal = '/recupero/nota-credito-linea/crear?facturaId='+$('#recuperoFacturaId').val();
-							
-		mostrarModal(urlContenidoModal);
-		return false;
-	});
-	
-	contenedor.on('click', '.modificarNotaCredito', function(){
-		lineaParaEditar = $(this).closest('tr');
-		var modal = mostrarModal($(this).attr('href'));
-		modal.dialog('option', 'title', 'Editar producto');	
-		return false;
-	});
-	
-	contenedor.on('click', '.eliminarNotaCredito', function(){
-		var mensaje = "¿Confirma que desea eliminar el registro?";
-		if(confirm(mensaje)){
-			var url = $(this).attr('href');
-			$this = $(this);
-			$.get(url, function(data){
-				if(data.success){
-					$this.closest("tr").remove();
-				} else {
-					alert("No se puedo eliminar el registro.");
-				}
-			});
-		}
-		return false;
-	});
-	
-	
-	function mostrarModal(url){
-		modalCargaProductos = $('<div></div>').dialog({
-			resizable: false,
-		    title: "Cargar producto",
-		    height: 400,
-		    width: 750,
-		    modal: true,
-		    open: function( event, ui ) {
-				$.get(url, function(data){
-					modalCargaProductos.html(data);
-				});
-		    },
-		    close: function(event, ui ){
-		    	modalCargaProductos.dialog('destroy');
-			}
-		  });
-		
-		modalCargaProductos.on('click', '.cancelar', function(){
-			modalCargaProductos.dialog('destroy');
-			return false;
-		});
-		
-		modalCargaProductos.on('submit', function(e){
-			var href = $(e.target).attr('action');
-			var data = $(e.target).serialize();
-			$.post(href, data, function(resultado){
-				if(resultado.success && resultado.nuevo){
-					$('#listaLineaNotaCreditos tbody').prepend(resultado.html);
-					$('#mensajeSinResultados').remove();
-					$('#listaDeNotaCreditos').removeClass('hide');
-					modalCargaProductos.dialog( "destroy" );
-				} else if(resultado.success && resultado.modificar){
-					$(lineaParaEditar).replaceWith(resultado.html);
-					modalCargaProductos.dialog( "destroy" );
-				} else {
-					modalCargaProductos.html(resultado);
-				}
-			});
-			return false;
-		});
-		
-		
-		return modalCargaProductos;
+@getClassEstado(i:Estado) = @{
+	var classEstado:String = new String()
+	if(i != null && i.id == 65){
+		classEstado = "borrador"
+	}else if(i != null && i.id == 68){
+		classEstado = "cancelada"
+	}else if(i != null && i.id == 67){
+		classEstado = "autorizado"
 	}
-	
-	
-	contenedor.find('form').on('submit', function(){
-		var url = $(this).attr("action");
-		var query = $(this).serialize();
-		$.get(url+"?"+query, function(data){
-			contenedor.parent().html(data);
-		});
-		return false;
-	});
-});
-</script>
+	classEstado
+
+}
+
+@views.html.recupero.mainRecupero("Notas De Debitos", scripts) {
+	<div class="page-header">
+		<div class="row">
+			<div class="col-sm-7">
+				<h1>Lista de Notas Debitos</h1>
+			</div>
+
+			<div class="col-sm-5">
+				<div class="dropdown pull-right">
+				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+				 	<i class="glyphicon glyphicon-list-alt"></i>
+				    Reportes
+				    <span class="caret"></span>
+				  </button>
+				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+				  </ul>
+				</div>
+
+				<div class="dropdown pull-right btn-header">
+				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+				 	<i class="glyphicon glyphicon-cog"></i>
+				    Acciones
+				    <span class="caret"></span>
+				  </button>
+				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+
+				  </ul>
+				</div>
+
+				<div class="pull-right btn-header">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	@views.html.tags.successError()
+
+
+	<div id="actions">
+		<form action="" id="formSearchRecuperoFacturas" method="GET">
+
+
+		<div class="row">
+
+
+			<div class="col-sm-2">
+				<label class="control-label">Punto Venta</label>
+				<div class="">
+				@select(formBuscador("puntoventa_id"),
+				PuntoVenta.find.all().map { p => p.id.toString -> p.numero}, 'class -> "form-control select", '_default -> "Seleccionar")
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="form-group">
+					<label for="nombre" class="control-label">Numero</label>
+					<div class="">
+					@inputText(formBuscador("numero"), 'class -> "form-control", 'autofocus -> "autofocus")
+					</div>
+				</div>
+			</div>
+
+			<div class="col-sm-4">
+				<label class="control-label">Cliente</label>
+					<div class="input-group">
+						@inputText(formBuscador("cliente.nombre"), 'name -> "", 'class -> "form-control", 'id -> "cliente")
+						@inputText(formBuscador("cliente_id"), 'hidden -> "hidden", 'id -> "cliente_id")
+						<span class="input-group-addon">
+							<a href="#" class="searchModal"
+										id="searchCliente"
+										data-title="Selección de Clientes"
+										data-url="@controllers.compras.routes.ClientesController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.cliente.simple"
+										data-label="#cliente"
+										data-field="#cliente_id">
+								<i class="glyphicon glyphicon-search"></i>
+							</a>
+						</span>
+					</div>
+
+			</div>
+
+
+			<div class="col-sm-2 input-group">
+				<label class="control-label">Fecha </label>
+				<div>
+				@inputText(formBuscador("fecha_desde"), 'class -> "form-control dateMask inputDateMascara", 'id -> "desde", 'placeholder -> "Desde")
+				@inputText(formBuscador("fecha_hasta"), 'class -> "form-control dateMask inputDateMascara", 'id -> "hasta", 'placeholder -> "Hasta")
+				</div>
+
+			</div>
+			<div class="col-sm-2">
+					<label class="control-label">Usuario
+						<div class="input-group">
+							@inputText(formBuscador("create_usuario_id"), 'hidden -> "hidden", 'id -> "create_usuario_id")
+							@inputText(formBuscador("create_usuario"), 'name -> "", 'class -> "form-control", 'id -> "create_usuario")
+							<span class="input-group-addon">
+							<a href="#" id="searchUsuario"
+										data-title="Selección de responsables"
+										data-url="@controllers.administracion.routes.UsuariosController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.usuario.simple"
+										data-label="#create_usuario"
+										data-field="#create_usuario_id">
+							<i class="glyphicon glyphicon-search"></i></a></span>
+						</div>
+					</label>
+				</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-2">
+				<label for="planilla" class="control-label">Planilla</label>
+				<div class="input-group">
+					@inputText(formBuscador("planilla.recuperoPlanillaEjercicio"),'class -> "form-control", 'id -> "planilla")
+					@inputText(formBuscador("planilla_id"),'hidden -> "hidden", 'id -> "planilla_id")
+
+					<span class="input-group-addon">
+					<a href="#"
+					id="searchPlanilla" data-title="Selección de Planilla"
+					data-url="@controllers.recupero.routes.RecuperoPlanillasController.modalBuscar()"
+					data-height="650" data-width="700"
+					data-listen="modal.seleccion.planilla.simple"
+					data-label="#planilla"
+					data-field="#planilla_id">
+					<i class="glyphicon glyphicon-search"></i></a></span>
+				</div>
+			</div>
+
+			<div class="col-sm-2">
+				<div class="form-group">
+				<label for="nombre" class="control-label">&nbsp;</label>
+				<button  class="form-control btn btn-primary">Buscar</button>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="form-group">
+				<label for="nombre" class="control-label">&nbsp;</label>
+				<a href="@controllers.recupero.routes.RecuperoNotasDebitosController.indexGeneral()"  class="form-control btn btn-default">Limpiar</a>
+				</div>
+			</div>
+		</div>
+
+		</form>
+	</div>
+	@if(buscador.getTotalRowCount == 0) {
+
+        <div class="well">
+            <em>No se encuentran Notas</em>
+        </div>
+
+    } else {
+		<table id="" class="table table-striped table-bordered">
+			<thead>
+				 <tr style="background: #FFFFFF;">
+			        <td colspan="6">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
+			        <td><b>Total:</b> <span class="baseFooter"></span></td>
+					<td colspan="1">&nbsp</td>
+		        </tr>
+				<tr>
+					<th width="100">N° Factura</th>
+					<th width="129">N° ND</th>
+					<th width="80">CAE</th>
+					<th width="70">Fecha CAE</th>
+					<th width="300">Planilla</th>
+					<th width="100">Fecha</th>
+					<th width="95">Total</th>
+
+					<th width="120">Usuario</th>
+				</tr>
+			</thead>
+			<tbody>
+				@for(linea <- buscador.getList) {
+						<tr class="pointer" data-estado="" data-href="@controllers.recupero.routes.RecuperoFacturasController.ver(linea.recupero_factura.id)&@UriTrack.encode()">
+
+						<td>@if(linea.recupero_factura != null){@(linea.recupero_factura.getNumeroFactura())}</td>
+						<td>@if(linea.getNumero() != null){@(linea.getNumero())}</td>
+						<td>@if(linea.cae != null){@(linea.cae)}</td>
+						<td>@if(linea.fecha_vencimiento != null){@(utils.DateUtils.formatDate(linea.fecha_vencimiento))}</td>
+						<td>@if(linea.planilla != null){@(linea.planilla.getRecuperoPlanillaEjercicio())}</td>
+						<td>@if(linea.fecha != null){@(utils.DateUtils.formatDate(linea.fecha))}</td>
+						<td>@utils.NumberUtils.moneda(linea.getTotal(),2)</td>
+						<td>@if(linea.create_usuario != null){@(linea.create_usuario.nombre)}</td>
+					</tr>
+				}
+			</tbody>
+	        <tfoot>
+		        <tr>
+			        <td colspan="6">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
+			        <td><b>Total:</b> <span class="baseFooter"></span></td>
+					<td colspan="1">&nbsp</td>
+		        </tr>
+	        </tfoot>
+        </table>
+
+
+    <div class="pagination pull-right">
+	    @views.html.helpers.paginador(buscador, controllers.recupero.routes.RecuperoNotasDebitosController.indexGeneral())
+	</div>
+	<script>
+	</script>
+	}
+}
