--- a/app/views/recupero/recuperoFactura/indexRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/indexRecuperoFactura.scala.html
@@ -197,6 +197,25 @@
 				</div>
 			<div class="col-sm-2">
 				<div class="form-group">
+					<label for="nombre" class="control-label">Numero Nota Credito</label>
+					<div class="">
+					@inputText(formBuscador("numero_nc"), 'class -> "form-control", 'autofocus -> "autofocus")
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="form-group">
+					<label for="nombre" class="control-label">Numero Nota Credito</label>
+					<div class="">
+					@inputText(formBuscador("numero_nd"), 'class -> "form-control", 'autofocus -> "autofocus")
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<div class="row">
+			<div class="col-sm-2">
+				<div class="form-group">
 				<label for="nombre" class="control-label">&nbsp;</label>
 				<button  class="form-control btn btn-primary">Buscar</button>
 				</div>
@@ -208,7 +227,6 @@
 				</div>
 			</div>
 		</div>
-
 		</form>
 	</div>
 
