--- a/app/views/recupero/recuperoNotaDebito/indexRecuperoGeneralNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/indexRecuperoGeneralNotaDebito.scala.html
@@ -178,7 +178,7 @@
 				 <tr style="background: #FFFFFF;">
 			        <td colspan="6">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
 			        <td><b>Total:</b> <span class="baseFooter"></span></td>
-					<td colspan="1">&nbsp</td>
+					<td colspan="2">&nbsp</td>
 		        </tr>
 				<tr>
 					<th width="100">N° Factura</th>
@@ -190,6 +190,7 @@
 					<th width="95">Total</th>
 
 					<th width="120">Usuario</th>
+					<th width="30"></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -204,6 +205,14 @@
 						<td>@if(linea.fecha != null){@(utils.DateUtils.formatDate(linea.fecha))}</td>
 						<td>@utils.NumberUtils.moneda(linea.getTotal(),2)</td>
 						<td>@if(linea.create_usuario != null){@(linea.create_usuario.nombre)}</td>
+						<td>
+						@if(linea.cae != null && !linea.cae.isEmpty()) {
+							<a class="btn btn-default btn-xs notSeleccion notaDebito" data-url="@controllers.recupero.routes.RecuperoReportesController.notaDebito(linea.id)">
+								<i class="glyphicon glyphicon-list-alt"></i>
+							</a>
+						}
+
+						</td>
 					</tr>
 				}
 			</tbody>
@@ -211,7 +220,7 @@
 		        <tr>
 			        <td colspan="6">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
 			        <td><b>Total:</b> <span class="baseFooter"></span></td>
-					<td colspan="1">&nbsp</td>
+					<td colspan="2">&nbsp</td>
 		        </tr>
 	        </tfoot>
         </table>
