--- a/app/views/recupero/recuperoPlanilla/verPlanilla.scala.html
+++ b/app/views/recupero/recuperoPlanilla/verPlanilla.scala.html
@@ -29,6 +29,8 @@ pa:List[models.recupero.RecuperoPago]
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 				  	<li><a id="reporteDesdePlanilla" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.informeDesdePlanilla(planilla.id)">Planilla Diaria</a></li>
 
+					<li><a id="reporteDesdePlanillaPagos" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.informePlanillaPagos(planilla.id)">Planilla Diaria Pagos</a></li>
+
 				  </ul>
 				</div>
 
