--- a/app/views/recupero/recuperoNotaDebito/formLineaNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/formLineaNotaDebito.scala.html
@@ -132,6 +132,14 @@ $(function(){
 			}
 	</div>
 </div>
+<div class="row">
+	<div class="col-sm-12">
+		<label for="cuenta" class="control-label">Nota</label>
+		<div class="input-group">
+			@textarea(lineaForm("nota"), 'class -> "form-control", 'id -> "nota", 'rows -> "1",'cols -> "500")
+		</div>
+	</div>
+</div>
 
 <div class="row form-actions">
     <div class="col-lg-offset-4 col-lg-8">
