--- a/app/views/recupero/recuperoNotaDebito/indexRecuperoGeneralNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/indexRecuperoGeneralNotaDebito.scala.html
@@ -182,14 +182,15 @@
 		        </tr>
 				<tr>
 					<th width="100">N° Factura</th>
-					<th width="129">N° ND</th>
+					<th width="129">N° NC</th>
 					<th width="80">CAE</th>
 					<th width="70">Fecha CAE</th>
-					<th width="300">Planilla</th>
+					<th width="50">Planilla</th>
 					<th width="100">Fecha</th>
 					<th width="95">Total</th>
 
 					<th width="120">Usuario</th>
+					<th  width="50">Nota</th>
 					<th width="30"></th>
 				</tr>
 			</thead>
@@ -205,6 +206,7 @@
 						<td>@if(linea.fecha != null){@(utils.DateUtils.formatDate(linea.fecha))}</td>
 						<td>@utils.NumberUtils.moneda(linea.getTotal(),2)</td>
 						<td>@if(linea.create_usuario != null){@(linea.create_usuario.nombre)}</td>
+						<td>@linea.nota</td>
 						<td>
 						@if(linea.cae != null && !linea.cae.isEmpty()) {
 							<a class="btn btn-default btn-xs notSeleccion notaDebito" data-url="@controllers.recupero.routes.RecuperoReportesController.notaDebito(linea.id)">
