--- a/app/views/recupero/recuperoNotaDebito/lineaNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/lineaNotaDebito.scala.html
@@ -16,7 +16,7 @@
 	<td>@linea.cantidad</td>
 	<td>@utils.NumberUtils.moneda(linea.precio, 2)</td>
 	<td>@utils.NumberUtils.moneda(linea.getTotal(),2)</td>
-
+	<td>@linea.nota</td>
 	<td>
 		@if(linea.cae != null && !linea.cae.isEmpty()) {
 			<a class="btn btn-default btn-xs notSeleccion notaDebito" data-url="@controllers.recupero.routes.RecuperoReportesController.notaDebito(linea.id)">
