--- a/app/views/recupero/recuperoFactura/formRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/formRecuperoFactura.scala.html
@@ -156,6 +156,15 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-sm-2">
+			<label class="control-label">Forma de pago</label>
+			<div class="form-group @if(recuperoFacturaForm.error("tipoPago")  != null) {has-error}else{has-required}">
+				@select(recuperoFacturaForm("tipoPago"),options(""->"Seleccionar", "efectivo"->"Efectivo","cheque"->"Cheque","tarjeta"->"Tarjeta","transferencia"->"Transferencia"), 'class -> "form-control select", 'id -> "tipoPago")
+				@recuperoFacturaForm("tipoPago").error.map{ error =>
+					<div class="text-error">@error.message</div>
+				}
+			</div>
+		</div>
 	</div>
 <script>
 $( function() {
