--- a/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
@@ -106,7 +106,7 @@
 		<div class="col-sm-2">
 			<label class="control-label">Forma de pago </label>
 			<p class="form-control-static form-control">
-			@recuperoFacturaForm("tipoPago").value match {
+			@recuperoFacturaForm("tipo_pago").value match {
 				    	case "efectivo" => {Efectivo}
 						case "cheque" => {Cheque}
 						case "tarjeta" => {Tarjeta}
