--- a/app/views/recupero/recuperoRecibo/recuperoReciboFactura/formRecuperoReciboFactura.scala.html
+++ b/app/views/recupero/recuperoRecibo/recuperoReciboFactura/formRecuperoReciboFactura.scala.html
@@ -36,15 +36,20 @@
 			}
 		</div>
 
-
-
-
-
 	<div class="col-sm-2">
 		<label class="control-label">Monto</label>
 		<div class="form-group @if(reciboFacturaForm.error("monto") != null) {has-error} else {has-required}">
 			@inputText(reciboFacturaForm("monto"), 'class -> "form-control", 'id -> "monto")
 			@reciboFacturaForm("monto").error.map{ error =>
+				<div class="text-error">@error.message</div>
+			}
+		</div>
+	</div>
+	<div class="col-sm-2">
+		<label class="control-label">Forma de pago</label>
+		<div class="form-group @if(reciboFacturaForm.error("tipo_pago")  != null) {has-error}else{has-required}">
+			@select(reciboFacturaForm("tipo_pago"),options(""->"Seleccionar", "efectivo"->"Efectivo","cheque"->"Cheque","tarjeta"->"Tarjeta","transferencia"->"Transferencia"), 'class -> "form-control select", 'id -> "tipoPago")
+			@reciboFacturaForm("tipo_pago").error.map{ error =>
 				<div class="text-error">@error.message</div>
 			}
 		</div>
