--- a/app/views/equipo/equipo/formEquipo.scala.html
+++ b/app/views/equipo/equipo/formEquipo.scala.html
@@ -14,6 +14,9 @@
 			<a href="@UriTrack.decode()" title="Volver al listado" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a>
 		</div>
 	</div>
+
+	@inputText(equipoForm("id"), 'type -> "hidden", 'id -> "equipoId")
+	<input type="hidden" name=@UriTrack.getKey() value="@UriTrack.code()" />
 	<div class="row">
 
 		<div class="col-sm-3">
